--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.3",
+    "chart.js": "^4.4.6",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
